--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <a href="" class="logo">
             <img src="images/Logo-Kabupaten-Demak-removebg-preview.png" alt="" width="50px">
         </a>
-        <ul class="nav-menu">
+        <ul class="nav-menu" id="nav-menu-bar">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="sig.html">SIG Demak</a></li>
-            <li><a href="tematik.html">Tematik</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="sig.html">SIG Demak</a></li> 
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul class="menu-hamburger" onclick="myFunction(this)">
             <div class="bar1"></div>
@@ -72,6 +72,7 @@
             header.style.top = value * 0.5 + 'px';
         }); 
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
