--- a/sig.html
+++ b/sig.html
@@ -11,12 +11,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
-    #map {
-        width: 100%;
-        height: 522px;
-        border-radius: 5px;
-        border: 3px solid #7597de;
-    }
     </style>
 </head>
 <body>
@@ -24,11 +18,16 @@
         <a href="" class="logo">
             <img src="images/Logo-Kabupaten-Demak-removebg-preview.png" alt="" width="50px">
         </a>
-        <ul>
-            <li><a href="index.html">Home</a></li>
+        <ul class="nav-menu" id="nav-menu-bar" >
+            <li><a href="index.html" >Home</a></li>
             <li><a href="sig.html" class="active">SIG Demak</a></li>
-            <li><a href="tematik.html">Tematik</a></li>
+            <!-- <li><a href="tematik.html">Tematik</a></li> -->
             <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul class="menu-hamburger" onclick="myFunction(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
         </ul>
     </header>
     <section class="heroAbout">
@@ -37,9 +36,47 @@
     <div class="sec" id="sec">
         <h2>Peta Tematik Demak</h2>
         <div class="frame">
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum est quis odit voluptatibus. Odio, cupiditate officiis, corrupti pariatur laboriosam labore molestias quam hic repudiandae, voluptates exercitationem nobis blanditiis voluptatum voluptatem!</p>
+           <div class="title">
+            <p>Berikut ini adalah SIG Sebaran Penerima Bantuan RTLH (Rumah Tidak Layak Huni)</p>
+            <div class="container-card">
+                <div class="card-box">
+                    <div class="image"><img src="images/ilustrasi.jpg" alt="">
+                    </div>
+                    <div class="deskripsi">
+                        <a href="sigdemak/tahap1.html">
+                            <h3>Tahap I</h3>
+                            <div class="brdr"></div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At quis, amet doloremque quo iure autem maiores nostrum soluta voluptatibus nobis. Ab esse asperiores tenetur ea provident, corporis similique rem voluptatum autem dolores maiores recusandae excepturi rerum in quae aut velit? Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="image"><img src="images/ilustrasi.jpg" alt="">
+                    </div>
+                    <div class="deskripsi">
+                        <a href="sigdemak/tahap2.html">
+                            <h3>Tahap II</h3>
+                            <div class="brdr"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="image"><img src="images/ilustrasi.jpg" alt="">
+                    </div>
+                    <div class="deskripsi">
+                        <a href="sigdemak/tahap3.html">
+                            <h3>Tahap III</h3>
+                            <div class="brdr"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        </a>
+                    </div>
+                </div> 
+            </div>
+           </div>
         </div> 
     </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
