--- a/tematik.html
+++ b/tematik.html
@@ -25,11 +25,16 @@
         <a href="" class="logo">
             <img src="images/Logo-Kabupaten-Demak-removebg-preview.png" alt="" width="50px">
         </a>
-        <ul>
+        <ul class="nav-menu" id="nav-menu-bar">
             <li><a href="index.html">Home</a></li>
             <li><a href="sig.html">SIG Demak</a></li>
-            <li><a href="tematik.html"class="active">Tematik</a></li>
+            <!-- <li><a href="tematik.html"  class="active">Tematik</a></li> -->
             <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul class="menu-hamburger" onclick="myFunction(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
         </ul>
     </header>
     <section class="heroAbout">
@@ -313,5 +318,6 @@
     });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
