--- a/sigdemak/tahap1.html
+++ b/sigdemak/tahap1.html
@@ -28,10 +28,10 @@
             <img src="../images/Logo-Kabupaten-Demak-removebg-preview.png" alt="" width="50px">
         </a>
         <ul class="nav-menu" id="nav-menu-bar">
-          <li><a href="index.html"  >Beranda</a></li>
-          <li><a href="latarbelakang.html">Latar Belakang</a></li>
-          <li><a href="sig.html"  class="active">SIG Demak</a></li> 
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../index.html"  >Beranda</a></li>
+          <li><a href="../latarbelakang.html">Latar Belakang</a></li>
+          <li><a href="../sig.html"  class="active">SIG Demak</a></li> 
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
         <ul class="menu-hamburger" onclick="myFunction(this)">
             <div class="bar1"></div>
@@ -44,7 +44,7 @@
     </section> 
     <div class="sec" id="sec">
         <h2>Marking Penerima Tahap 1</h2>
-        <iframe src="../QGISEXPORT/qgis2web_2023_12_19-00_30_14_599214/" frameborder="0" width="100%" height="334px"></iframe>
+        <iframe src="../QGISEXPORT/qgis2web_2023_12_19-00_30_14_599214/index.html" frameborder="0" width="100%" height="334px"></iframe>
         <!-- <div class="frame">
         </div> -->
         <h2 class="mt-5">Diagram Penerima Tahap 1</h2>
