--- a/sig.html
+++ b/sig.html
@@ -77,7 +77,7 @@
             </div>
             <br><br>
             <p>Perbandingan Penerima</p>
-            <iframe src="QGISEXPORT/qgis2web_2023_12_19-00_33_13_215170/" frameborder="0" width="100%" height="334px"></iframe>
+            <iframe src="QGISEXPORT/qgis2web_2023_12_19-00_33_13_215170/index.html" frameborder="0" width="100%" height="334px"></iframe>
             <div class="mt-3">
                 <div class="container p-0">
                     <div class="chart" style="flex: 1 0 0;">
