--- a/sigdemak/tahap3.html
+++ b/sigdemak/tahap3.html
@@ -27,10 +27,10 @@
             <img src="../images/Logo-Kabupaten-Demak-removebg-preview.png" alt="" width="50px">
         </a>
         <ul class="nav-menu" id="nav-menu-bar">
-            <li><a href="index.html"  >Beranda</a></li>
-            <li><a href="latarbelakang.html">Latar Belakang</a></li>
-            <li><a href="sig.html"  class="active">SIG Demak</a></li> 
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="../index.html"  >Beranda</a></li>
+            <li><a href="../latarbelakang.html">Latar Belakang</a></li>
+            <li><a href="../sig.html"  class="active">SIG Demak</a></li> 
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
         <ul class="menu-hamburger" onclick="myFunction(this)">
             <div class="bar1"></div>
@@ -43,7 +43,7 @@
     </section> 
     <div class="sec" id="sec">
         <h2>Marking Penerima Tahap 3</h2>
-        <iframe src="../QGISEXPORT/qgis2web_2023_12_19-00_31_28_212269/" frameborder="0" width="100%" height="334px"></iframe>
+        <iframe src="../QGISEXPORT/qgis2web_2023_12_19-00_31_28_212269/index.html" frameborder="0" width="100%" height="334px"></iframe>
         <!-- <div class="frame">
             <div id="map">
             </div>
